--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,35 +1,19 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 import Card from '../components/Card.astro';
+// const allPosts  = await Astro.glob('../../algorithms/*.md')
+const allPosts  = await Astro.glob('../pages/submissions/*.md')
+console.log(allPosts[0].url)
 ---
 
-<Layout title="Welcome to Astro.">
+<BaseLayout title="Welcome to Astro.">
 	<main>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
+			{allPosts.map(post => <Card href={post.url} title={post.frontmatter.title}/>)}
 		</ul>
 	</main>
-</Layout>
+</BaseLayout>
 
 <style>
 	main {
