--- a/src/components/CategorySelector.astro
+++ b/src/components/CategorySelector.astro
@@ -5,5 +5,5 @@ const currentPath = pathname.slice(1);
 ---
 
 <ul class="flex gap-2 pb-6 overflow-x-scroll">
-  {categories.map(category => <li class="text-sm bg-[#C7BFB4] px-4 py-2 rounded-lg whitespace-nowrap"><a href="/">{category}</a></li>)}
+  {categories.map(category => <li class="text-sm bg-[#C7BFB4] px-4 py-2 rounded-lg whitespace-nowrap"><a href={`/${category}`}>{category}</a></li>)}
 </ul>
