--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
 const { title } = Astro.props;
 import Nav from '../components/Nav.astro';
 ---
@@ -12,6 +13,7 @@ import Nav from '../components/Nav.astro';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<!-- <ViewTransitions /> -->
 	</head>
 	<body class="pl-2 pr-2">
 		<Nav/>
