--- a/src/components/CardList.astro
+++ b/src/components/CardList.astro
@@ -5,7 +5,7 @@ const {list} = Astro.props
 
 {list.length > 0 ? 
 <ul role="list" class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
-  {list.map(item => <Card href={item.url} title={item.frontmatter.title} author={item.frontmatter.by} fileextension={item.frontmatter.fileextension}/>)}
+  {list.map(item => <Card href={item.url} title={item.frontmatter.title} author={item.frontmatter.author} extension={item.frontmatter.extension}/>)}
 </ul> 
 : 
 <div class="h-[60vh] w-full flex flex-col items-center justify-center">
