--- a/src/components/LanguageSelector.astro
+++ b/src/components/LanguageSelector.astro
@@ -6,7 +6,7 @@ const currentPath = pathname.slice(1);
 
 <h3>Languages: </h3>
 <ul class="flex gap-2 pb-6 pt-4 overflow-x-scroll">
-  {languages.map(category => <li><a  class={`text-sm bg-[#C7BFB4] px-4 py-2 rounded-lg whitespace-nowrap font-bold uppercase ${category}`} href="/">{category}</a></li>)}
+  {languages.map(category => <li><a  class={`text-sm bg-[#C7BFB4] px-4 py-2 rounded-lg whitespace-nowrap font-bold uppercase ${category}`} href="/snippets/">{category}</a></li>)}
 </ul>
 
 <style>
