--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,10 +2,10 @@
 ---
 
 <nav class="container mx-auto flex justify-between items-center relative h-28">
-  <a href="/" class="inline-block">
-    <img src="/logo.svg" alt="">
+  <a href="/snippets/" class="inline-block">
+    <img src="/snippets/logo.svg" alt="">
   </a>
   <a href="https://github.com/acesdit/snippets/" target="_blank" class="fixed top-0 right-0">
-    <img src="/github-badge.svg" alt="GitHub">
+    <img src="/snippets/github-badge.svg" alt="GitHub">
   </a>
 </nav>
