Add default file icon

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,6 +4,7 @@ const { href, title, author, extension } = Astro.props;
 import pyImg from '../assets/py.svg'
 import jsImg from '../assets/js.svg'
 import cppImg from '../assets/cpp.svg'
+import other from '../assets/other.svg'
 
 let img;
 switch(extension) {
@@ -16,6 +17,8 @@ switch(extension) {
 	case 'js':
 		img = jsImg;
 		break;
+	default:
+		img = other;
 }
 ---
 
