Fix icon size & add ellipsis

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -24,12 +24,12 @@ switch(extension) {
 
 <li>
 	<a href={href} class="block bg-white p-6 rounded-lg border-solid border-2 border-black relative">
-		<h2 class="font-bold text-3xl pb-4">
+		<h2 class="font-bold text-3xl pb-4 truncate">
 			{title}
 		</h2>
 		<p>
 			By {author}
 		</p>
-		<Image src={img} class="w-6 absolute bottom-3 right-3" alt="Language Icon" />
+		<Image src={img} class="w-6 h-6 absolute bottom-3 right-3" alt="Language Icon" />
 	</a>
 </li>
