Fix responsive issue

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -28,7 +28,7 @@ switch(extension) {
 
 <li>
 	<a href={href} class="block bg-white p-6 rounded-lg border-solid border-2 border-black relative">
-		<h2 class="font-bold text-3xl pb-4 truncate">
+		<h2 class="font-bold text-3xl pb-4 text-ellipsis md:truncate">
 			{title}
 		</h2>
 		<p>
