--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,7 +5,7 @@
   <a href="/snippets/" class="inline-block">
     <img src="/snippets/logo.svg" alt="">
   </a>
-  <a href="https://github.com/acesdit/snippets/" target="_blank" class="fixed top-0 right-0">
+  <a href="https://github.com/acesdit/snippets/" target="_blank" class="fixed z-20 top-0 right-0 w-32 md:w-auto">
     <img src="/snippets/github-badge.svg" alt="GitHub">
   </a>
 </nav>
