--- a/src/layouts/SubmissionLayout.astro
+++ b/src/layouts/SubmissionLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from './BaseLayout.astro'
 const { frontmatter } = Astro.props
 ---
 
-<BaseLayout title={frontmatter.title}>
+<BaseLayout title={frontmatter.title} transition:persist>
   <h1 class="text-5xl font-bold pb-5">{frontmatter.title}</h1>
   <p class="text-base pb-5">By {frontmatter.author}</p>
   <p class="lg:w-2/3 overflow-hidden rounded-tr-lg"></p>
