Fix breaking of copy code button

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,9 +15,9 @@ import Nav from '../components/Nav.astro';
 		<title>{title}</title>
 		<ViewTransitions />
 	</head>
-	<body class="pl-2 pr-2">
+	<body class="px-4 pb-24">
 		<Nav/>
-		<div class="container mx-auto">
+		<div class="container mx-auto mb-auto">
 			<slot />
 		</div>
 	</body>
