--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<nav class="container mx-auto flex justify-between items-center relative h-28">
+<nav class="container mx-auto flex justify-between items-center relative h-28 pl-4">
   <a href="/snippets/" class="inline-block">
     <img src="/snippets/logo.svg" alt="">
   </a>
