--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ import Footer from '../components/Footer.astro';
 		<title>{title}</title>
 		<ViewTransitions />
 	</head>
-	<body class="">
+	<body class="flex flex-col min-h-screen">
 		<Nav/>
 		<div class="container mx-auto mb-auto pb-24 px-4">
 			<slot />
