--- a/src/pages/[category].astro
+++ b/src/pages/[category].astro
@@ -24,6 +24,6 @@ const filteredSubmissions = submissions.filter((submission) => {
 
 <BaseLayout title={category}>
   <CategorySelector/>
-  <!-- <LanguageSelector/> -->
+  <LanguageSelector/>
   <CardList list={filteredSubmissions}/>
 </BaseLayout>
