--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,8 @@ import Footer from '../components/Footer.astro';
 		<link rel="apple-touch-icon" href="public/icons/apple-icon-180.png" />
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-
+		<link rel="manifest" href="/manifest.webmanifest">
+		<script id="vite-plugin-pwa:register-sw" src="/registerSW.js" />
 		<link
 			rel="apple-touch-startup-image"
 			href="public/icons/apple-splash-2048-2732.jpg"
