Bug Fix: Filter section would vanish upon navigating back to the home page
Bug: The CategorySelector.astro and LanguageSelector.astro components would vanish for some inexplicable reason when navigating back to the home page from a code snippet.
Fix: Removed ViewTransitions from BaseLayout.astro. That fixed the components from deloading. However, it broke the code snippet block when viewing the code. Hardcoded the division and division CSS that displays the code to fix that.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -50,8 +50,7 @@ import Footer from '../components/Footer.astro';
 <link rel="apple-touch-startup-image" href="/snippets/icons/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
 		<link rel="manifest" href="/snippets/manifest.webmanifest">
 		<script id="vite-plugin-pwa:register-sw" src="/snippets/registerSW.js" />
-
-		<ViewTransitions />
+	<!--<ViewTransitions/>-->
 	</head>
 	<body class="flex flex-col min-h-screen">
 		<Nav />
@@ -59,7 +58,8 @@ import Footer from '../components/Footer.astro';
 			<slot />
 		</div>
 		<Footer />
-	</body><style is:global>
+	</body>
+	<style is:global>
 		html {
 			font-family: system-ui, sans-serif;
 			background: #fcf5eb;
