--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@ import Footer from '../components/Footer.astro';
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-[#FCF5EB] dark:bg-[#212323] ">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Collection of code snippets" />
@@ -27,7 +27,7 @@ import Footer from '../components/Footer.astro';
 <style is:global>
 	html {
 		font-family: system-ui, sans-serif;
-		background: #FCF5EB;
+		/* background: #FCF5EB; */
 		background-size: 224px;
 	}
 	code {
