--- a/src/components/CardList.astro
+++ b/src/components/CardList.astro
@@ -8,8 +8,8 @@ const {list} = Astro.props
   {list.map(item => <Card href={item.url} title={item.frontmatter.title} author={item.frontmatter.author} extension={item.frontmatter.extension} category={item.frontmatter.category}/>)}
 </ul> 
 : 
-<div class="h-[50vh] w-full flex flex-col items-center justify-center">
-  <div class="text-7xl pb-6">¯\_(ツ)_/¯</div>
+<div class="h-[50vh] w-full flex flex-col items-center justify-center dark:text-white">
+  <div class="text-7xl pb-6 dark:text-white">¯\_(ツ)_/¯</div>
   No entries yet
 </div>}
 
