--- a/src/components/LanguageSelector.astro
+++ b/src/components/LanguageSelector.astro
@@ -1,77 +1,82 @@
 ---
+
 ---
 
-<div id="languages" class="flex gap-2 pb-6 overflow-x-scroll">
-</div>
+<div id="languages" class="flex gap-2 pb-6 overflow-x-scroll"></div>
 
-<script is:inline>
-
+<script>
+  function languageFilter() {
     const languages = [
-        {name: 'All', class: 'other'},
-        {name: 'Python', class: 'py'},
-        {name: 'Javascript', class: 'js'},
-        {name: 'C++', class: 'cpp'},
-        {name: 'Java', class: 'java'},
+      { name: 'All', class: 'other' },
+      { name: 'Python', class: 'py' },
+      { name: 'Javascript', class: 'js' },
+      { name: 'C++', class: 'cpp' },
+      { name: 'Java', class: 'java' },
     ]
 
-    var currentLanguage = "other"
+    var currentLanguage = 'other'
 
-    const languages_list = document.getElementById('languages');
-
+    const languages_list = document.getElementById('languages')
 
     languages.forEach((language) => {
-        const button = document.createElement('button');
-        button.className = 'bg-[#C7BFB4] hover:bg-[#aca59c] block text-sm px-4 py-2 rounded-lg whitespace-nowrap transition-all language';
-        button.classList.add(language.class);
-        button.innerText = language.name;
+      const button = document.createElement('button')
+      button.className =
+        'bg-[#C7BFB4] hover:bg-[#aca59c] block text-sm px-4 py-2 rounded-lg whitespace-nowrap transition-all language'
+      button.classList.add(language.class)
+      button.innerText = language.name
 
-        if (language.class == 'other') {
-            button.classList.remove('bg-[#C7BFB4]');
-            button.classList.remove('hover:bg-[#aca59c]');
-            button.classList.add('bg-black');
-            button.classList.add('hover:bg-[#434343]');
-            button.classList.add('text-white');
-        }
+      if (language.class == 'other') {
+        button.classList.remove('bg-[#C7BFB4]')
+        button.classList.remove('hover:bg-[#aca59c]')
+        button.classList.add('bg-black')
+        button.classList.add('hover:bg-[#434343]')
+        button.classList.add('text-white')
+      }
 
-        button.addEventListener('click', () => {
-
-            var all_buttons = document.querySelectorAll('.language');
-            all_buttons.forEach((button) => {
-                if (currentLanguage != button.classList[10]) {
-                    button.classList.remove('bg-black');
-                    button.classList.remove('hover:bg-[#434343]');
-                    button.classList.remove('text-white');
-                    button.classList.add('bg-[#C7BFB4]');
-                    button.classList.add('hover:bg-[#aca59c]');
-                }
-            })
-            currentLanguage = language.class;
-
-            button.classList.remove('bg-[#C7BFB4]');
-            button.classList.remove('hover:bg-[#aca59c]');
-            button.classList.add('bg-black');
-            button.classList.add('hover:bg-[#434343]');
-            button.classList.add('text-white');
-
-            var cards = document.querySelectorAll('.card');
-            cards.forEach((card) => {
-                if (currentLanguage != 'other' && card.classList[2] != currentLanguage) {
-                    card.classList.add('language-hidden');
-                } else {
-                    card.classList.remove('language-hidden');
-                }
-            })
-
+      button.addEventListener('click', () => {
+        var all_buttons = document.querySelectorAll('.language')
+        all_buttons.forEach((button) => {
+          if (currentLanguage != button.classList[10]) {
+            button.classList.remove('bg-black')
+            button.classList.remove('hover:bg-[#434343]')
+            button.classList.remove('text-white')
+            button.classList.add('bg-[#C7BFB4]')
+            button.classList.add('hover:bg-[#aca59c]')
+          }
         })
-        languages_list.appendChild(button);
+        currentLanguage = language.class
+
+        button.classList.remove('bg-[#C7BFB4]')
+        button.classList.remove('hover:bg-[#aca59c]')
+        button.classList.add('bg-black')
+        button.classList.add('hover:bg-[#434343]')
+        button.classList.add('text-white')
+
+        var cards = document.querySelectorAll('.card')
+        cards.forEach((card) => {
+          if (
+            currentLanguage != 'other' &&
+            card.classList[2] != currentLanguage
+          ) {
+            card.classList.add('language-hidden')
+          } else {
+            card.classList.remove('language-hidden')
+          }
+        })
+      })
+      languages_list.appendChild(button)
     })
-    if(!window.SomeGlobal) {
-        window.SomeGlobal = {} // ....
+  }
+
+  document.addEventListener('astro:page-load', () => {
+    if (window.location.pathname === '/snippets/') {
+      languageFilter()
     }
+  })
 </script>
 
 <style is:global>
-    .language-hidden {
-        @apply hidden;
-    }
+  .language-hidden {
+    @apply hidden;
+  }
 </style>
